--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-html, body, #container, #svg {
-  width: 100vw;
-  height: 100vh;
+html, body {
+  width: 100dvw;
+  height: 100dvh;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -13,10 +13,14 @@ body {
   align-items: center;
   justify-content: center;
 }
-text {
-  fill: #FFFFFF;
+#svg, #container {
+  width: 100%;
+  height: 100%;
 }
 /* Hide SVG to avoid flash of unstyled content */
 #svg {
-	visibility: hidden;
+  visibility: hidden;
+}
+text {
+  fill: #FFFFFF;
 }
