Multi-page text with support for touch devices (swipe left/right to page forward/back)

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 /* Hide SVG to avoid flash of unstyled content */
 #svg {
   visibility: hidden;
+  margin: 2vh;
 }
 text {
   fill: #FFFFFF;
