--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
   width: 100dvw;
   height: 100dvh;
+  overscroll-behavior-y: none; /* Prevent vertical scroll "bounce" in some browsers */
   margin: 0;
   padding: 0;
   font-family: sans-serif;
