CSS transition: opacity (important for random page transitions where the new page might be the same as the old page; the opacity transition is the only indication that something has happened).

--- a/style.css
+++ b/style.css
@@ -20,8 +20,16 @@ body {
 }
 /* Hide SVG to avoid flash of unstyled content */
 #svg {
-  visibility: hidden;
   margin: 2vh;
+}
+#svg, #svg.hide {
+  visibility: hidden;
+  opacity: 0;
+}
+#svg.show {
+  visibility: visible;
+  transition: opacity 0.5s;
+  opacity: 1;
 }
 text {
   fill: #FFFFFF;
