--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body {
   visibility: visible;
   opacity: 1;
 }
+#svg.dim {
+  visibility: visible;
+  opacity: 0.7;
+}
 text {
   fill: #FFFFFF;
   paint-order: stroke;
